# simslides

./: .hgignore  CMakeLists.txt  QCon.sh  README.md  build_plugins.sh  colcon.pkg  convert.sh  final.world  generate_models.sh  oscon.sh  oss4dm.sh  playback.sh  prepare_all.sh  roscon.sh  roscon2017.sh  roscon2017_worldonly.sh  rosi.sh  setup.sh  setup.sh.in  simslides.sh  simslides.sh.in  stack  videos.txt
animate_model/: AnimateModel.cc  CMakeLists.txt
animated_quad/: AnimatedQuad.cc  CMakeLists.txt
camera_poses/: CMakeLists.txt  CameraPosesPlugin.cc
classic/: CMakeLists.txt  Helpers.cc  Helpers.hh  ImportDialog.cc  InsertActorDialog.cc  LoadDialog.cc  LoadDialog.hh  PresentMode.cc  PresentMode.hh  SimSlides.cc  SimSlides.hh  Simslides.cc  Simslides.hh  simslides_classic.sh.in
common/: CMakeLists.txt  Common.cc  Keyframe.cc
common/include/simslides/common/: Common.hh  Keyframe.hh
gazebo/: CMakeLists.txt  SimSlidesGz.cc  SimSlidesGz.hh  SimSlidesGz.qml  SimSlidesGz.qrc  simslides_gazebo.sh.in
ignition/: CMakeLists.txt  SimSlidesIgn.cc  SimSlidesIgn.hh  SimSlidesIgn.qml  SimSlidesIgn.qmlc  SimSlidesIgn.qrc  simslides_ignition.sh.in
media/: slide.world
media/materials/scripts/: script.material  script.material.erb
models/: slide.world
models/banner-0/: model.config  model.sdf
models/beach_terrain/: model.config  model.sdf
models/brazil/: model.config  model.sdf
models/demo_slide-0/: model.config  model.sdf
models/demo_slide-0/meshes/: demo_slide-0.mtl
models/demo_slide-1/: model.config  model.sdf
models/demo_slide-1/meshes/: demo_slide-1.mtl
models/demo_slide-2/: model.config  model.sdf
models/demo_slide-3/: model.config  model.sdf
models/demo_slide-4/: model.config  model.sdf
models/demo_slide-5/: model.config  model.sdf
models/demo_slide-6/: model.config  model.sdf
models/dolly/: model.sdf
models/france/: model.config  model.sdf
models/japan/: model.config  model.sdf
models/map/: model.config  model.sdf
models/nao_blue/: model.config  nao_simple_shapes.sdf
models/ocean/: model.sdf
models/photo_graduation/: model.config  model.sdf
models/photo_pc/: model.config  model.sdf
models/poland/: model.config  model.sdf
models/slide-0/: model.config  model.sdf
models/slide-1/: model.sdf
models/slide-10/: model.config  model.sdf
models/slide-100/: model.config  model.sdf
models/slide-101/: model.config  model.sdf
models/slide-11/: model.sdf
models/slide-12/: model.config  model.sdf
models/slide-13/: model.sdf
models/slide-14/: model.sdf
models/slide-15/: model.config  model.sdf
models/slide-16/: model.sdf
models/slide-17/: model.sdf
models/slide-18/: model.sdf
models/slide-19/: model.sdf
models/slide-2/: model.config  model.sdf
models/slide-20/: model.sdf
models/slide-200/: model.config  model.sdf
models/slide-201/: model.config  model.sdf
models/slide-21/: model.config  model.sdf
models/slide-22/: model.sdf
models/slide-23/: model.config  model.sdf
models/slide-24/: model.config  model.sdf
models/slide-25/: model.config  model.sdf
models/slide-26/: model.config  model.sdf
models/slide-27/: model.config  model.sdf
models/slide-28/: model.config  model.sdf
models/slide-29/: model.config  model.sdf
models/slide-3/: model.config  model.sdf
models/slide-30/: model.config  model.sdf
models/slide-300/: model.config  model.sdf
models/slide-301/: model.config  model.sdf
models/slide-31/: model.config  model.sdf
models/slide-32/: model.config  model.sdf
models/slide-33/: model.config  model.sdf
models/slide-34/: model.config  model.sdf
models/slide-35/: model.config  model.sdf
models/slide-36/: model.config  model.sdf
models/slide-37/: model.config  model.sdf
models/slide-38/: model.config  model.sdf
models/slide-39/: model.config  model.sdf
models/slide-4/: model.sdf
models/slide-40/: model.config  model.sdf
models/slide-400/: model.config  model.sdf
models/slide-41/: model.config  model.sdf
models/slide-42/: model.config  model.sdf
models/slide-43/: model.config  model.sdf
models/slide-44/: model.config  model.sdf
models/slide-45/: model.config  model.sdf
models/slide-46/: model.config  model.sdf
models/slide-47/: model.config  model.sdf
models/slide-48/: model.config  model.sdf
models/slide-5/: model.sdf
models/slide-500/: model.config  model.sdf
models/slide-6/: model.sdf
models/slide-7/: model.sdf
models/slide-8/: model.sdf
models/slide-9/: model.sdf
models/slide_template/: model.config  model.sdf
models/task_1_gif/: model.config  model.sdf
models/task_2_gif/: model.config  model.sdf
models/thankyou/: model.config  model.sdf
models/thankyou_korean/: model.config  model.sdf
models/usa/: model.config  model.sdf
models/valkyrie/: README.md
models/workcell/: model.sdf
plugins/: CMakeLists.txt  Common.cc  Common.hh  ImportDialog.cc  ImportDialog.hh  InsertActorDialog.cc  Keyframe.cc  Keyframe.hh  NewDialog.cc  NewDialog.hh  PresentMode.cc  PresentMode.hh  Simslides.cc  Simslides.hh
plugins/animate_model/: AnimateModel.cc
plugins/camera_poses/: CameraPosesPlugin.cc  CameraPosesPlugin.hh
plugins/reset_model/: CMakeLists.txt
plugins/sky_timer/: CMakeLists.txt  SkyTimer.cc
ros2/: CMakeLists.txt  package.xml
ros2/src/: follow.cpp
src/: CMakeLists.txt  Common.cc  Common.hh  ImportDialog.cc  ImportDialog.hh  InsertActorDialog.cc  InsertActorDialog.hh  Keyframe.cc  Keyframe.hh  LoadDialog.cc  LoadDialog.hh  PresentMode.cc  PresentMode.hh  Simslides.cc  Simslides.hh
src/plugins/: CMakeLists.txt  ResetModel.cc
world/: final.world  slides.world
worlds/: 2018_QCon.world  QConAI.world  ROSConJP.world  demo_slide.sdf  demo_slide.world  oscon.world  oss4dm.world  plugin.world  plugin.world.erb  roscon.world  roscon2017_worldonly.world  roscon_1.world  roscon_2.world  roscon_template.world  rosi.world  saved.world  simslides.world  simslides_classic.world  simslides_gazebo.sdf  simslides_ignition.sdf  slides.world  slides.world.erb  superstar.world
worlds/models/: banner.world
(+330 files in other folders)
